--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,22 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #76BA99;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #FFFFFF;
+}
+
+.rounded-button {
+  border-radius: 25px !important;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #76BA99;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +40,4 @@
     transform: rotate(360deg);
   }
 }
+
